finalize validator and toexcel

--- a/apps/templates/pages/blog.html
+++ b/apps/templates/pages/blog.html
@@ -32,8 +32,8 @@
           <div class="card card-plain">
             <div class="card-header p-0 position-relative">
               <a class="d-block blur-shadow-image">
-                <img src="/static/assets-landing/img/file.jpg" alt="img-blur-shadow"
-                  class="img-fluid shadow border-radius-lg" loading="lazy" style="max-width: 17rem;">
+                <img src="/static/assets-landing/img/ags.jpg" alt="img-blur-shadow"
+                  class="img-fluid shadow border-radius-lg" loading="lazy" style="max-width: 15rem; height:15rem;">
               </a>
             </div>
             <div class="card-body px-0">
@@ -55,8 +55,8 @@
           <div class="card card-plain">
             <div class="card-header p-0 position-relative">
               <a class="d-block blur-shadow-image">
-                <img src="/static/assets-landing/img/excel.png" alt="img-blur-shadow"
-                  class="img-fluid shadow border-radius-lg" loading="lazy" style="max-width: 17rem;">
+                <img src="/static/assets-landing/img/excel.jpg" alt="img-blur-shadow"
+                  class="img-fluid shadow border-radius-lg" loading="lazy" style="max-width: 15rem; height:15rem;">
               </a>
             </div>
             <div class="card-body px-0">
@@ -83,15 +83,16 @@
             <div class="card-header p-0 position-relative">
               <a class="d-block blur-shadow-image">
                 <img src="/static/assets-landing/img/geo.jpg" alt="img-blur-shadow"
-                  class="img-fluid shadow border-radius-lg" loading="lazy" style="max-width: 17rem;">
+                  class="img-fluid shadow border-radius-lg" loading="lazy" style="max-width: 17rem; height:15rem;">
               </a>
             </div>
             <div class="card-body px-0">
               <h5>
                 <a href="#" class="text-dark font-weight-bold">Geodata platform</a>
               </h5>
-              <p>
-                Exlore your data, manage and decode in few minutes
+              <p style="font-size: 15px;">
+                Manage your geodata in a completely new way. From AGS to dynamic
+                visualization and reporting within seconds
               </p>
               <a href="{% url 'login' %}" class="text-info text-sm icon-move-right">Run the app
                 <i class="fas fa-arrow-right text-xs ms-1" aria-hidden="true"></i>
