--- a/apps/templates/pages/landing.html
+++ b/apps/templates/pages/landing.html
@@ -150,7 +150,7 @@
   </section>
   <!-- -------- START PRE-FOOTER 1 w/ SUBSCRIBE BUTTON AND IMAGE ------- -->
   <section class="py-3 mt-1">
-    <div class="container-fluid px-0">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-12 position-relative">
           <div class="row bg-gray-100 bottom-0 py-7">
@@ -167,7 +167,7 @@
                 geodata.
               </p>
             </div>
-            <div class="col-lg-4 mt-lg-0 mt-5 ps-lg-0 ps-0">
+            <div class="col-lg-7 mt-lg-0 mt-5 ps-lg-0 ps-0">
               <div class="p-3 info-horizontal">
                 <div class="description ps-3">
                   <p class="mb-0"><span class=number>1. </span>Site characterization and geohazard studies </p>
@@ -184,17 +184,11 @@
                     Blackgold.</p>
                 </div>
               </div>
-
-            </div>
-            <div class="col-lg-3 mt-lg-0 mt-5 ps-lg-0 ps-0">
               <div class="p-3 info-horizontal">
                 <div class="description ps-3">
                   <p class="mb-0"><span class=number>4. </span>Foundation design / shoring design.</p>
                 </div>
               </div>
-
-
-
               <div class="p-3 info-horizontal">
                 <div class="description ps-3">
                   <p class="mb-0"><span class=number>5. </span>Data analysis and interpretation.</p>
@@ -238,8 +232,9 @@
             <P>We provide In depth analysis of geotechnical data focusing on valuable, project specific insights.
               Interpretation made easy so that you can draw meaningful decisions and turn geotechnical risk into a
               unique competitive advantage.</P>
-            <P>Have an interesting project or want to know more? <br>
-              Mail Us:
+            <P>Want to leave feedback, found a bug or have a great idea for our next tool development? 
+               <br>
+               Please do not hesitate to contact us at
               <a href="mailto:info@example.com"> info@orycta.com</a>
             </P>
           </div>
