--- a/apps/templates/pages/tool/AGSValidator.html
+++ b/apps/templates/pages/tool/AGSValidator.html
@@ -33,7 +33,34 @@
                 </li>
             </ul>
             <div class="tab-content tab-space tab-subcategories">
-                <div class="tab-pane" id="link7">  
+                <div class="tab-pane" id="link7"> 
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-md-12 ml-auto mr-auto">
+                                    <p>This is an easy-to-use on-line AGS validation tool. Upload your 
+                                        .ags files to review and verify their format and  summarize content. 
+                                        This tool is in line with guidelines from the Association of Geotechnical 
+                                        & Geoenvironmental Specialists and the published AGS validator application (Beta).
+                                         Note that the validator only checks the format of 
+                                        the files and not accuracy of the data itself. 
+                                    </p>
+                                    <p>
+                                        The content of the AGS is summarized in terms of general 
+                                        information for the ags file, borehole information, field, 
+                                        laboratory and chemical testing information.
+                                    </p>
+                                    <p>
+                                    Works for AGS 3.0,4.0 or 4.1 formats in line with Association 
+                                        of Geotechnical & Geoenvironmental Specialists (AGS.org).
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
+
+ 
                 </div>
                 <div class="tab-pane active" id="link8">
                     <div class="card">
@@ -100,6 +127,7 @@
                             
                             <ol>
                                 <li>AGS.org.uk/data-format, Association of Geotechnical & Geoenviornmental Specialists, 2015-23.</li>
+                                <li>Validator repository: <a href ="https://gitlab.com/ags-data-format-wg/ags-python-library">https://gitlab.com/ags-data-format-wg/ags-python-library </a></li>
                             </ol>
                         </div>
                     </div>
