--- a/apps/templates/pages/tool/RelativeDensity.html
+++ b/apps/templates/pages/tool/RelativeDensity.html
@@ -388,6 +388,8 @@
             }
         },
         yAxis: {
+            max : 100,
+            tickInterval:10,
             title: {
                 enabled: true,
                 text: "Relative Density"
